<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_leitura" />
        <item
            android:id="@+id/nav_sub_setor"
            android:icon="@drawable/ic_location_on_24"
            android:title="@string/menu_sub_setor" />
        <item
            android:id="@+id/nav_sincronizar"
            android:icon="@drawable/ic_baseline_autorenew_24"
            android:title="@string/menu_sincronizar" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_app_settings_alt_24"
            android:title="@string/menu_config" />
    </group>
</menu>