<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.remote.subsetor.SincronizarFragment">

    <!-- Campo CD SubSetor -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLyCdSubSetor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCdSubSetor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ll_cd_sub_setor"
            android:inputType="text|numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSincronizar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_sincronizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnZeraBase"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FF5733"
        android:layout_marginBottom="0dp"
        android:text="@string/btn_zerar_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>